--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "link": "^0.1.5",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "^0.61.5",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.3.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
