--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "axios": "^0.19.2",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "immer": "^6.0.2",
+    "jetifier": "^1.6.5",
     "link": "^0.1.5",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
@@ -23,6 +27,14 @@
     "react-native-screens": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.1",
+    "react-redux": "^7.2.0",
+    "reactotron-react-js": "^3.3.7",
+    "reactotron-react-native": "^4.0.3",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "styled": "^1.0.0",
     "styled-components": "^5.0.1"
   },
